fix scroll page shift

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 body {
     background-color: white;
     color: black /* #53626e */; 
